syntax = "proto3";
package communications;
option go_package = "../internal/pkg/communications/delivery/grpc/gen/;gen";

service Communications {
  rpc AddReaction(AddReactionRequest) returns (AddReactionResponse);
  rpc GetMatchList(GetMatchListRequest) returns (GetMatchListResponse);
  rpc GetReactionList(GetReactionListRequest) returns (GetReactionListResponse);
  rpc GetMatchTime(GetMatchTimeRequest) returns (GetMatchTimeResponse);
  rpc GetMatchesBySearch(GetMatchesBySearchRequest) returns (GetMatchesBySearchResponse);
  rpc UpdateOrCreateReaction(UpdateOrCreateReactionRequest) returns (UpdateOrCreateReactionResponse);
  rpc CheckMatchExists(CheckMatchExistsRequest) returns (CheckMatchExistsResponse);
}

message AddReactionRequest {
  Reaction Reaction = 1;
}

message AddReactionResponse {
}

message GetMatchListRequest {
  int32 UserID = 1;
}

message GetMatchListResponse{
  repeated int32 Authors = 1;
}

message GetReactionListRequest{
  int32 UserId = 1;
}

message GetReactionListResponse{
  repeated int32 Receivers = 1;
}

message GetMatchTimeRequest{
  int32 FirstUser = 1;
  int32 SecondUser = 2;
}

message GetMatchTimeResponse{
  string Time = 1;
}

message GetMatchesBySearchRequest {
  int32 UserID = 1;
  string Search = 2;
  string Username = 3;

}

message GetMatchesBySearchResponse {
  repeated int32 Authors = 1;
}

message UpdateOrCreateReactionRequest {
  Reaction Reaction = 1;
}

message UpdateOrCreateReactionResponse {

}

message CheckMatchExistsRequest {
  int32 FirstUser = 1;
  int32 SecondUser = 2;
}

message CheckMatchExistsResponse {
  bool Exists = 1;
}

message Reaction {
  int32 ID = 1;
  int32 Author = 2;
  int32 Receiver = 3;
  bool Type = 4;
}